# SARP

./: .gitignore  LICENSE  README.md  net_finetune_control_predictor_joint_mpc(1).py  net_finetune_control_predictor_joint_mpc_finetune_non_obs_with_new.py  net_finetune_control_predictor_joint_mpc_full_obs.py  net_finetune_control_predictor_joint_mpc_full_obs_control_const.py  net_finetune_control_predictor_joint_mpc_full_obs_force_rate.py  net_finetune_control_predictor_joint_mpc_non_obs.py  net_finetune_control_predictor_separate_mpc.py  pyproject.toml  repair_finetune_w_lagrangian.py
examples/: TODO.txt
examples/1_hospital_simulation/: 0_pretrain_policy.py  1_pretrain_predictive_model.py  2_sarp_repair.ipynb
examples/1_hospital_simulation/.ipynb_checkpoints/: 2_sarp_repair-checkpoint.ipynb
examples/1_hospital_simulation/data/expert_data/sample1/: hit.npy  pos.npy  scans.npy  vel.npy
examples/1_hospital_simulation/data/wander_data/sample1/: hit.npy  pos.npy  scans.npy  vel.npy
examples/2_lower_leg_prosthesis/: 0_data_preprocess.py  0_pretrain_policy_full_obs.py  1_pretrain_policy_full_obs.py  1_pretrain_policy_partial_obs.py  2_pretrain_predictive_model_full_obs.py  2_pretrain_predictive_model_partial_obs.py  3_sarp_repair_full_obs.ipynb  3_sarp_repair_partial_obs.ipynb
examples/2_lower_leg_prosthesis/data/expert_data/sample1/: dankle_test.npy  dankle_train.npy  dankle_validation.npy  dfemur_dtibia_test.npy  dfemur_dtibia_train.npy  dfemur_dtibia_validation.npy  force_test.npy  force_train.npy  force_validation.npy
sarp/utils/: __init__.py  utils.py
